# proto/gen/api/v1/user_service.pb.go
@@ -859,8 +859,10 @@ type UserStats struct {
 	PinnedMemos []string `protobuf:"bytes,5,rep,name=pinned_memos,json=pinnedMemos,proto3" json:"pinned_memos,omitempty"`
 	// Total memo count.
 	TotalMemoCount int32 `protobuf:"varint,6,opt,name=total_memo_count,json=totalMemoCount,proto3" json:"total_memo_count,omitempty"`
-	unknownFields  protoimpl.UnknownFields
-	sizeCache      protoimpl.SizeCache
+	// Total comment count authored on memos visible to the caller.
+	TotalCommentCount int32 `protobuf:"varint,9,opt,name=total_comment_count,json=totalCommentCount,proto3" json:"total_comment_count,omitempty"`
+	unknownFields     protoimpl.UnknownFields
+	sizeCache         protoimpl.SizeCache
 }
 
 func (x *UserStats) Reset() {
@@ -938,6 +940,13 @@ func (x *UserStats) GetPinnedMemos() []string {
 func (x *UserStats) GetTotalMemoCount() int32 {
 	if x != nil {
 		return x.TotalMemoCount
+	}
+	return 0
+}
+
+func (x *UserStats) GetTotalCommentCount() int32 {
+	if x != nil {
+		return x.TotalCommentCount
 	}
 	return 0
 }
@@ -3416,7 +3425,7 @@ const file_api_v1_user_service_proto_rawDesc = "" +
 	"\x11DeleteUserRequest\x12-\n" +
 	"\x04name\x18\x01 \x01(\tB\x19\xe0A\x02\xfaA\x13\n" +
 	"\x11memos.api.v1/UserR\x04name\x12\x19\n" +
-	"\x05force\x18\x02 \x01(\bB\x03\xe0A\x01R\x05force\"\xf5\x05\n" +
+	"\x05force\x18\x02 \x01(\bB\x03\xe0A\x01R\x05force\"\xa5\x06\n" +
 	"\tUserStats\x12\x17\n" +
 	"\x04name\x18\x01 \x01(\tB\x03\xe0A\bR\x04name\x12M\n" +
 	"\x0fmemo_type_stats\x18\x03 \x01(\v2%.memos.api.v1.UserStats.MemoTypeStatsR\rmemoTypeStats\x12B\n" +
@@ -3425,7 +3434,8 @@ const file_api_v1_user_service_proto_rawDesc = "" +
 	"\x17memo_updated_timestamps\x18\b \x03(\v2\x1a.google.protobuf.TimestampR\x15memoUpdatedTimestamps\x129\n" +
 	"\fpinned_memos\x18\x05 \x03(\tB\x16\xfaA\x13\n" +
 	"\x11memos.api.v1/MemoR\vpinnedMemos\x12(\n" +
-	"\x10total_memo_count\x18\x06 \x01(\x05R\x0etotalMemoCount\x1a;\n" +
+	"\x10total_memo_count\x18\x06 \x01(\x05R\x0etotalMemoCount\x12.\n" +
+	"\x13total_comment_count\x18\t \x01(\x05R\x11totalCommentCount\x1a;\n" +
 	"\rTagCountEntry\x12\x10\n" +
 	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
 	"\x05value\x18\x02 \x01(\x05R\x05value:\x028\x01\x1a\x8b\x01\n" +
